# ifaddr

./: .gitignore  .project  .pydevproject  .readthedocs.yaml  README.md  README.rst  genindex.html  ifaddr.py  ifaddr_posix.py  ifaddr_shared.py  ifaddr_win32.py  index.html  mypy.ini  objects.inv  output.html  pyproject.toml  pytest.ini  requirements-dev.txt  script.py  search.html  searchindex.js  setup.cfg  setup.py  test.py
.github/: dependabot.yml
.github/workflows/: ci.yml  zizmor.yml
_modules/: ifaddr.html  index.html
_static/: readme.txt
doc/: conf.py  index.rst
docs/: changelog.rst  conf.py  index.rst
docs/_static/: readme.txt
ifaddr/: __init__.py  _posix.py  _shared.py  _win32.py  netifaces.py  test_ifaddr.py
